--- a/index.html
+++ b/index.html
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <script type="text/javascript" id="zsiqchat">
-      var $zoho = $zoho || {};
-      $zoho.salesiq = $zoho.salesiq || {
-        widgetcode:
-          "59b2b790e3d922e989a0561f0a8820fabdca31adc2b58e30d274388222c60a33",
-        values: {},
-        ready: function () {},
-      };
-      var d = document;
-      s = d.createElement("script");
-      s.type = "text/javascript";
-      s.id = "zsiqscript";
-      s.defer = true;
-      s.src = "https://salesiq.zoho.in/widget";
-      t = d.getElementsByTagName("script")[0];
-      t.parentNode.insertBefore(s, t);
-    </script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Vite + React + TS</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+        <script type="text/javascript" id="zsiqchat">
+            var $zoho = $zoho || {};
+            $zoho.salesiq = $zoho.salesiq || {
+                widgetcode:
+                    "59b2b790e3d922e989a0561f0a8820fabdca31adc2b58e30d274388222c60a33",
+                values: {},
+                ready: function () {},
+            };
+            var d = document;
+            s = d.createElement("script");
+            s.type = "text/javascript";
+            s.id = "zsiqscript";
+            s.defer = true;
+            s.src = "https://salesiq.zoho.in/widget";
+            t = d.getElementsByTagName("script")[0];
+            t.parentNode.insertBefore(s, t);
+        </script>
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-CED23F5BTD"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("set", {
+                campaignName: "MyCampaignName",
+                campaignMedium: "MyMedium",
+                campaignSource: "MySource",
+            });
+
+            gtag("config", "G-CED23F5BTD");
+        </script>
+    </body>
 </html>
