Updated code for zoho integration

--- a/index.html
+++ b/index.html
@@ -9,27 +9,7 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
-        <script type="text/javascript" id="zsiqchat">
-            var $zoho = $zoho || {};
-            $zoho.salesiq = $zoho.salesiq || {
-                widgetcode:
-                    "59b2b790e3d922e989a0561f0a8820fabdca31adc2b58e30d274388222c60a33",
-                values: {},
-                ready: function () {},
-            };
-            var d = document;
-            s = d.createElement("script");
-            s.type = "text/javascript";
-            s.id = "zsiqscript";
-            s.defer = true;
-            s.src = "https://salesiq.zoho.in/widget";
-            t = d.getElementsByTagName("script")[0];
-            t.parentNode.insertBefore(s, t);
-        </script>
-        <script
-            async
-            src="https://www.googletagmanager.com/gtag/js?id=G-CED23F5BTD"
-        ></script>
+        <script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "59b2b790e3d922e989a0561f0a8820fabdca31adc2b58e30d274388222c60a33", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.in/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
